* Update for 7.5.176. * Replace build script with a better one. * Switch image to use Eclipse Temurin. * Install Unifi manually via the zip distribution. * Add UNIFI_UID and UNIFI_GID environment variables. * Move volumes to later in the Dockerfile to avoid inconsistent behaviour. * Update readme.